--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,3 +18,24 @@ html {
   max-width: 1100px;
   margin: 0 auto;
 }
+
+header {
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
+  /*Defines the size of the background image*/
+  background-size: cover;
+  /*Defines the position of the background image*/
+  background-position: center;
+  height: 100vh;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  margin: 0;
+}
