--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -106,7 +106,7 @@ h3 {
   display: block;
   color: #e67e22;
   margin-bottom: 10px;
-  
+
 }
 
 
@@ -183,4 +183,26 @@ h3 {
 .main-nav li a:hover,
 .main-nav li a:active {
   border-bottom: 2px solid #e67e22;
+}
+
+.meals-showcase {
+  list-style: none;
+  width: 100%;
+
+}
+
+.meals-showcase li {
+  display: block;
+  float: left;
+  width: 25%;
+}
+
+.meal-photo {
+  width: 100%;
+  margin: 0;
+}
+
+.meal-photo img {
+  width: 100%;
+  height: auto;
 }
